services/jobs/deploy/deploy.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: jobs
  labels:
    app: jobs
    service: jobs
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: jobs
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs
  labels:
    app: jobs
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs
      version: v1
  template:
    metadata:
      labels:
        app: jobs
        version: v1
      annotations:
          sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: skyhive
      containers:
        - name: jobs
          image: 157506822563.dkr.ecr.us-east-2.amazonaws.com/jobs
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
#          readinessProbe:
#            httpGet:
#              path: /actuator/health/readiness
#              port: 8080
#            initialDelaySeconds: 30
#            periodSeconds: 10
#            timeoutSeconds: 3
#            failureThreshold: 1
#          livenessProbe:
#            httpGet:
#              path: /actuator/health/liveness
#              port: 8080
#            initialDelaySeconds: 60
#            periodSeconds: 10
#            timeoutSeconds: 3
#            failureThreshold: 1
          securityContext:
            runAsUser: 1000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobs
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /jobs/
            pathType: Prefix
            backend:
              service:
                name: jobs
                port:
                  number: 8080
